# CHIP8C-Emulator

./: .gitignore  CMakeLists.txt  Chip_emulator.cpp  Chip_emulator.h  README.md  main.cpp
docs/: infa.txt  plan.drawio
